Added report on photo sessions with further orders
- moved commen from and to date inline form blocks to include-able
  fragments.

--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -11,7 +11,11 @@
           <li><a href="/product">Nytt produkt</a></li>
           <li><a href="/product-list">Se alle produkter</a></li>
           <li><a href="/reports/order-overview">Oversikt varekjøp</a></li>
-          <li><a href="/about">Om</a></li>
+          <li>
+            <a href="/reports/sessions-without-further-orders">
+              Fotograferinger uten forstørrelser
+            </a>
+          </li>
         </ul>
       </div>
     </div>
