--- a/src/main/python/templates/reports/order-overview.html
+++ b/src/main/python/templates/reports/order-overview.html
@@ -7,32 +7,8 @@
       <form action="/reports/order-overview"
             method="get"
             class="form-inline">
-        <div class="form-group">
-          <label class="control-label" for="from_date">
-            Fra dato
-          </label>
-          <div class="">
-            <input class="form-control"
-                   id="from_date"
-                   name="from_date"
-                   value="{{ from_date | iso_date }}"
-                   type="date"
-                   placeholder="from_date"/>
-          </div>
-        </div>
-        <div class="form-group">
-          <label class="control-label" for="to_date">
-            Til dato
-          </label>
-          <div class="">
-            <input class="form-control"
-                   id="to_date"
-                   name="to_date"
-                   value="{{ to_date | iso_date }}"
-                   type="date"
-                   placeholder="to_date"/>
-          </div>
-        </div>
+        {% include "inline-from-date.html" %}
+        {% include "inline-to-date.html" %}
         <div class="form-group">
           <label class="control-label" for="selected_product_list">
             Produkter
