--- a/src/main/python/templates/customer.html
+++ b/src/main/python/templates/customer.html
@@ -160,40 +160,33 @@
         </div>
       </form>
       {% if customer["id"] %}
-      <form action="/customer/{{ customer["id"] }}/delete"
-            method="post"
-            class="form-horizontal">
-        <div class="form-group">
-          <div class="col-xs-offset-2 col-xs-10">
-            <button type="submit" class="btn btn-danger">
+        <div class="row">
+          <div class="col-xs-offset-2 col-xs-5">
+            <button class="btn btn-danger"
+                    onclick="window.location.href = '/customer/{{ customer['id'] }}/delete'">
               Slett kunde
             </button>
           </div>
         </div>
-      </form>
-      <form action="/order"
-            method="post"
-            style="display: inline"
-            class="form-horizontal">
-        <div class="form-group">
-          <input id="customer_id"
-                 name="customer_id"
-                 type="hidden" value="{{ customer['id'] }}"
-                 />
-        </div>
-        <div class="form-group">
-          <div class="col-xs-offset-2 col-xs-10">
-            <button type="submit" class="btn btn-success">
-              Opprett ny ordre
-            </button>
-          </div>
-        </div>
-      </form>
-      {% endif %}
-      {% if order_list | length > 0 %}
+        <hr/>
         <h2>
           Ordrer
         </h2>
+        <hr/>
+        <div style="margin-bottom: 1em">
+          <form action="/order"
+                method="post">
+            <input id="customer_id"
+                   name="customer_id"
+                   type="hidden" value="{{ customer['id'] }}"
+                   />
+            <button type="submit" class="btn btn-primary">
+              Opprett ny ordre
+            </button>
+          </form>
+        </div>
+      {% endif %}
+      {% if order_list | length > 0 %}
         <table class="table table-hover">
           <tr>
             <th>
