Updated TODO -> DONE
- Added TODO on fixing HTML5 locale

--- a/src/main/python/templates/customer.html
+++ b/src/main/python/templates/customer.html
@@ -133,6 +133,9 @@
 
           </div>
         </div>
+        <!-- TODO get HTML5 features (dates) working for a Norwegian
+             locale. Is this inherited from html lang or is this taken
+             directed by the browser's UI language?-->
         <div class="form-group">
           <label class="control-label col-xs-2" for="birth_date">
             Fødselsdato
