--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -8,9 +8,8 @@
         <ul id="menu" class="nav navbar-nav">
           <li><a href="/search">Søk</a></li>
           <li><a href="/customer">Ny kunde</a></li>
-          <li><a href="/product">Nytt produkt</a></li>
-          <li><a href="/product-list">Se alle produkter</a></li>
-          <li><a href="/reports/order-overview">Oversikt varekjøp</a></li>
+          <li><a href="/product-list">Produkter</a></li>
+          <li><a href="/reports/order-overview">Ordreoversikt</a></li>
           <li>
             <a href="/reports/sessions-without-further-orders">
               Fotograferinger uten forstørrelser
