New report/overview of all promises the coming week
- the to and from dates can be changed by the user

--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -15,6 +15,11 @@
               Fotograferinger uten forstørrelser
             </a>
           </li>
+          <li>
+            <a href="/reports/promise-list">
+              Leveranser
+            </a>
+          </li>
         </ul>
       </div>
     </div>
