--- a/src/main/python/templates/order-item.html
+++ b/src/main/python/templates/order-item.html
@@ -30,14 +30,31 @@
         </div>
         <div class="form-group">
           <label class="control-label" for="number_of_items">Antall</label>
-          <input
-            id="number_of_items"
-            name="number_of_items"
-            class="form-control span2"
-            type="number"
-            placeholder="antall"
-            value="{{ order_item['number_of_items'] }}"
+          <div class="input-group">
+            <span class="input-group-addon">stk</span>
+            <input
+              id="number_of_items"
+              name="number_of_items"
+              class="form-control span2"
+              type="number"
+              placeholder="antall"
+              value="{{ order_item['number_of_items'] }}"
+              />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label" for="discount">Rabatt</label>
+          <div class="input-group">
+            <span class="input-group-addon">%</span>
+            <input
+              id="discount"
+              name="discount"
+              class="form-control"
+              type="number"
+              placeholder="rabatt"
+              value="{{ order_item['discount'] }}"
             />
+          </div>
         </div>
         <div class="form-group">
           <label class="control-label" for="comment">Kommentar</label>
