--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -1,12 +1,12 @@
     <div class="navbar-inverse navbar-fixed-top">
       <div class="navbar-header">
         <a class="navbar-brand" href="/">
-          Atelier
+          ⌂ Atelier
         </a>
       </div>
       <div class="navbar-collapse collapse">
         <ul id="menu" class="nav navbar-nav">
-          <li><a href="/search">Søk</a></li>
+          <li><a href="/search">⌕ Søk</a></li>
           <li><a href="/customer">Ny kunde</a></li>
           <li><a href="/product-list">Produkter</a></li>
           <li><a href="/reports/order-overview">Ordreoversikt</a></li>
@@ -23,3 +23,4 @@
         </ul>
       </div>
     </div>
+
