Added support for order payment type

--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -6,7 +6,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul id="menu" class="nav navbar-nav">
-          <li><a href="/search">⌕ Søk</a></li>
+          <li><a href="/search">Søk</a></li>
           <li><a href="/customer">Ny kunde</a></li>
           <li><a href="/product-list">Produkter</a></li>
           <li><a href="/reports/order-overview">Ordreoversikt</a></li>
