Sentralised all sub headings with from and to dates
- added filter for outputting the time delta of the date range

- made all reports use the same from and to date fragment

--- a/src/main/python/templates/reports/promise-list.html
+++ b/src/main/python/templates/reports/promise-list.html
@@ -3,9 +3,7 @@
         <h1>
           Leveranser
         </h1>
-        <p>
-          {{ from_date | sn }} → {{ to_date | sn }}
-        </p>
+        {% include "from-to-date-info.html" %}
 {% endblock %}
 {% block content %}
       <form action="/reports/promise-list"
