--- a/src/main/python/templates/reports/order-overview.html
+++ b/src/main/python/templates/reports/order-overview.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}
       <h1>Ordreoversikt</h1>
-      <p>{{ from_date | sn }} → {{ to_date | sn }}</p>
+      {% include "from-to-date-info.html" %}
 {% endblock %}
 {% block content %}
 
