Just use the sn filter, no need for explicit of unicode decoding

--- a/src/main/python/templates/customer-list.html
+++ b/src/main/python/templates/customer-list.html
@@ -19,12 +19,12 @@
         </td>
         <td>
           <a href="/customer/{{ customer["id"] }}">
-            {{ customer["first_name"].decode('utf-8') }}
+            {{ customer["first_name"] | sn }}
           </a>
         </td>
         <td>
           <a href="/customer/{{ customer["id"] }}">
-            {{ customer["last_name"].decode('utf-8') }}
+            {{ customer["last_name"] | sn }}
           </a>
         </td>
         <td>{{ customer["creation_date"] }}</td>
