--- a/src/main/python/templates/new-customer.html
+++ b/src/main/python/templates/new-customer.html
@@ -13,7 +13,7 @@
             <input class="form-control"
                    id="first_name"
                    name="first_name"
-                   placeholder="first_name"/>
+                   placeholder="Fornavn"/>
           </div>
         </div>
         <div class="form-group">
@@ -22,7 +22,7 @@
             <input class="form-control"
                    id="last_name"
                    name="last_name"
-                   placeholder="last_name"/>
+                   placeholder="Etternavn"/>
           </div>
         </div>
         <div class="form-group">
@@ -32,7 +32,7 @@
                    id="email_address"
                    name="email_address"
                    type="email"
-                   placeholder="email_address"/>
+                   placeholder="Epost adresse"/>
           </div>
         </div>
         <div class="form-group">
@@ -41,7 +41,7 @@
             <input class="form-control"
                    id="address"
                    name="address"
-                   placeholder="address"/>
+                   placeholder="Adresse"/>
           </div>
         </div>
         <div class="form-group">
@@ -69,7 +69,7 @@
                    id="home_phone"
                    name="home_phone"
                    type="number"
-                   placeholder="home_phone"/>
+                   placeholder="Telefon hjem"/>
 
           </div>
         </div>
@@ -81,7 +81,7 @@
             <input class="form-control"
                    id="mobile_phone"
                    name="mobile_phone"
-                   placeholder="mobile_phone"
+                   placeholder="Mobil telefon"
                    type="number"
                    />
           </div>
@@ -94,7 +94,7 @@
             <input class="form-control"
                    id="work_phone" name="work_phone"
                    type="number"
-                   placeholder="work_phone"/>
+                   placeholder="Telefon jobb"/>
 
           </div>
         </div>
@@ -107,7 +107,7 @@
                    id="birth_date"
                    name="birth_date"
                    type="date"
-                   placeholder="birth_date"/>
+                   placeholder="Fødselsdato"/>
 
           </div>
         </div>
