--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -6,31 +6,38 @@
         {{ customer["first_name" ] | sn }}
       </h1>
       <p>
-        Opprettet: {{ order["creation_date"] }},
-        sist oppdatert: {{ order["updated_date"] | sdn }}
+        Opprettet: {{ order["creation_date"] }}
+        {% if order["updated_date"] %}
+        — sist oppdatert: {{ order["updated_date"] | sdn }}
+        {% endif %}
       </p>
 {% endblock %}
 {% block content %}
       <div class="well">
         <div class="row">
-          <div class="col-md-3">Kundenummer: {{ customer["id"] }}</div>
-          <div class="col-md-3">Mobil: {{ customer["mobile_phone"] | sn }}</div>
-          <div class="col-md-3">Telefon: {{ customer["home_phone"] | sn }}</div>
-          <div class="col-md-3">Arbeid: {{ customer["work_phone"] | sn }}</div>
+          <div class="col-sm-3">
+            Kundenummer:
+            <a href="/customer/{{ customer["id"] }}">
+              {{ customer["id"] }}
+            </a>
+          </div>
+          <div class="col-sm-3">Mobil: {{ customer["mobile_phone"] | sn }}</div>
+          <div class="col-sm-3">Telefon: {{ customer["home_phone"] | sn }}</div>
+          <div class="col-sm-3">Arbeid: {{ customer["work_phone"] | sn }}</div>
         </div>
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-sm-3">
             Navn:
             <a href="/customer/{{ customer["id"] }}">
               {{ customer["first_name" ] | sn }}
               {{ customer["last_name"] | sn }}
             </a>
           </div>
-          <div class="col-md-3">
+          <div class="col-sm-3">
             Adresse: {{ customer["address"] | sn }}, {{ customer["post_code"] | sn }}
           </div>
-          <div class="col-md-3">Født: {{ customer["birth_date"] | sn }}</div>
-          <div class="col-md-3">
+          <div class="col-sm-3">Født: {{ customer["birth_date"] | sn }}</div>
+          <div class="col-sm-3">
             Epost:
             <a href="mailto:{{customer["email_address"] | sn }}">
               {{ customer["email_address"] | sn }}
