--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -61,7 +61,6 @@
             </div>
           </div>
         </div>
-          <!-- TODO add payment type? -->
         <div class="form-group">
           <label class="col-sm-2 control-label" for="paid_amount">Betalt</label>
           <div class="col-sm-10">
@@ -124,7 +123,6 @@
                    />
           </div>
         </div>
-        <!-- TODO add internet_allowed -->
         <div class="form-group">
           <label class="col-sm-2 control-label">
             Kan brukes i markedsføring
@@ -135,6 +133,21 @@
                    type="checkbox"
                    value="1"
                    {% if order["marketing_allowed"] %}
+                   checked
+                   {% endif %}
+                   />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-sm-2 control-label">
+            Kan brukes på internett
+          </label>
+          <div class="col-sm-1">
+            <input id="internet_allowed"
+                   name="internet_allowed"
+                   type="checkbox"
+                   value="1"
+                   {% if order["internet_allowed"] %}
                    checked
                    {% endif %}
                    />
