Added printable order view
- new button on order screen

- own template for printable orders

- atelier_db::get_order now includes more fields for richer
  views/templates.

--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -188,6 +188,10 @@
           </div>
         </div>
       </form>
+      <button class="btn btn-default"
+              onclick="window.location.href = '/print/order/{{ order['id'] }}'">
+        Skriv ut ordre
+      </button>
       <button class="btn btn-danger"
               onclick="window.location.href = '/order/{{ order['id'] }}/delete'">
         Slett ordre
