Added more default fields when creating an order
- otherwise, the more advanced view of an order will fail as it joins
  with more tables

--- a/src/main/python/templates/customer.html
+++ b/src/main/python/templates/customer.html
@@ -182,6 +182,14 @@
                    name="customer_id"
                    type="hidden" value="{{ customer['id'] }}"
                    />
+            <input id="payment_type_id"
+                   name="payment_type_id"
+                   type="hidden" value="1"
+                   />
+            <input id="order_status_id"
+                   name="order_status_id"
+                   type="hidden" value="1"
+                   />
             <button type="submit" class="btn btn-primary">
               Opprett ny ordre
             </button>
