Moved allowed_* from order to customer
- this was a customer request
- removed fulltext-table.sql as we don't use it anymore
- updated tables.sql
- updated & corrected documentation
- added favicon reference

--- a/src/main/python/templates/base.html
+++ b/src/main/python/templates/base.html
@@ -6,6 +6,7 @@
   <head>
     <meta name="author" content="Torstein Krause Johansen"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="shortcut icon" href="/files/graphics/favicon.ico"/>
     <link rel="stylesheet"
           type="text/css"
           href="/files/bootstrap/css/bootstrap.min.css"/>
@@ -15,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="/files/atelier.css"/>
     {% block head_title %}
     <title>
-      Atelier Fotosystem 2.0
+      Atelier Fotosystem 2.4
     </title>
     {% endblock %}
   </head>
