--- a/src/main/python/templates/new-customer.html
+++ b/src/main/python/templates/new-customer.html
@@ -112,6 +112,40 @@
           </div>
         </div>
         <div class="form-group">
+          <label class="control-label col-xs-2">Kan brukes i avis</label>
+          <div class="col-xs-10">
+            <input id="newspaper_allowed"
+                   name="newspaper_allowed"
+                   type="checkbox"
+                   value="1"
+                   />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-xs-2">
+            Kan brukes i markedsføring
+          </label>
+          <div class="col-xs-10">
+            <input id="marketing_allowed"
+                   name="marketing_allowed"
+                   type="checkbox"
+                   value="1"
+                   />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="control-label col-xs-2">
+            Kan brukes på internett
+          </label>
+          <div class="col-xs-10">
+            <input id="internet_allowed"
+                   name="internet_allowed"
+                   type="checkbox"
+                   value="1"
+                   />
+          </div>
+        </div>
+        <div class="form-group">
           <div class="col-xs-offset-2 col-xs-10">
             <button type="submit" class="btn btn-primary">
               Opprett ny kunde
