--- a/src/main/python/templates/customer.html
+++ b/src/main/python/templates/customer.html
@@ -150,6 +150,49 @@
           </div>
         </div>
         <div class="form-group">
+          <label class="col-sm-2 control-label">Kan brukes i avis</label>
+          <div class="col-sm-1">
+            <input id="newspaper_allowed"
+                   name="newspaper_allowed"
+                   type="checkbox"
+                   value="1"
+                   {% if customer["newspaper_allowed"] %}
+                   checked
+                   {% endif %}
+                   />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-sm-2 control-label">
+            Kan brukes i markedsføring
+          </label>
+          <div class="col-sm-1">
+            <input id="marketing_allowed"
+                   name="marketing_allowed"
+                   type="checkbox"
+                   value="1"
+                   {% if customer["marketing_allowed"] %}
+                   checked
+                   {% endif %}
+                   />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-sm-2 control-label">
+            Kan brukes på internett
+          </label>
+          <div class="col-sm-1">
+            <input id="internet_allowed"
+                   name="internet_allowed"
+                   type="checkbox"
+                   value="1"
+                   {% if customer["internet_allowed"] %}
+                   checked
+                   {% endif %}
+                   />
+          </div>
+        </div>
+        <div class="form-group">
           <div class="col-xs-offset-2 col-xs-10">
             <button type="submit" class="btn btn-primary">
               {% if customer["id"] %}
