Made it possible to override total amount of order items

--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -115,6 +115,21 @@
           </div>
         </div>
         <div class="form-group">
+          <label class="control-label col-sm-2" for="discount">
+            Overstyr totalpris
+          </label>
+          <div class="col-sm-10">
+            <input
+              id="total_amount"
+              name="total_amount"
+              class="form-control"
+              type="number"
+              placeholder="Overstyr totalpris"
+              value="0"
+              />
+          </div>
+        </div>
+        <div class="form-group">
           <label class="control-label col-sm-2"
                  for="comment">Kommentar</label>
           <div class="col-sm-10">
