--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -2,8 +2,10 @@
 {% block title %}
       <h1>
         Ordrenummer: {{ order["id"] }},
-        {{ customer["last_name"] | sn }},
-        {{ customer["first_name" ] | sn }}
+        <a href="/customer/{{ customer["id"] }}">
+          {{ customer["last_name"] | sn }},
+          {{ customer["first_name" ] | sn }}
+        </a>
       </h1>
       <p>
         Opprettet: {{ order["creation_date"] }}
@@ -225,7 +227,7 @@
             </div>
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group" style="display: none;">
           <label class="col-sm-2 control-label" for="payment_type_id">Betalingstype</label>
           <div class="col-sm-10">
             <select id="payment_type_id" name="payment_type_id" class="form-control">
